# udon-lua

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Assets/Prefabs/: LuaConsole.prefab
Assets/Scenes/: Lua.unity
Assets/Scenes/Lua/: GridFloor_udon.mat  SampleAssets_matte.mat
Assets/Scripts/: Lua.asset  LuaConsole.asset  LuaConsole.cs  class_wasi_snapshot_preview1.asset  class_wasi_snapshot_preview1.cs
Assets/XR/: XRGeneralSettings.asset
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
lua/rb_wasm/include/rb_wasm/: fiber.h
lua/rb_wasm/src/: fiber.c
lua/src/: ldo.c  linit.c  loslib.c  lvm.c  runtime.h
rb_wasm/: CMakeLists.txt
rb_wasm/include/rb_wasm/: setjmp.h
rb_wasm/src/: runtime.c  setjmp.c
src/: lauxlib.c  lbaselib.c  lualib.h  main.c  runtime.c  runtime.h
